--- a/app/src/main/res/layout/activity_results.xml
+++ b/app/src/main/res/layout/activity_results.xml
@@ -8,7 +8,7 @@
     android:background="@drawable/bg_gradient"
     android:descendantFocusability="beforeDescendants"
     android:fitsSystemWindows="true"
-    tools:context=".Results">
+    tools:context="com.nec.staffApp.Results">
 
     <android.support.design.widget.AppBarLayout
         foreground="?android:windowContentOverlay"
