--- a/app/src/main/res/layout/activity_scan.xml
+++ b/app/src/main/res/layout/activity_scan.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="info.androidhive.nec.ScanActivity">
+    tools:context="com.nec.staffApp.ScanActivity">
 
     <fragment
         android:id="@+id/barcode_scanner"
