--- a/app/src/main/res/layout/content_ticket_details.xml
+++ b/app/src/main/res/layout/content_ticket_details.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/bg_gradient"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".Results">
+    tools:context="com.nec.staffApp.Results">
 
     <TextView
         android:id="@+id/txt_error"
@@ -21,7 +21,7 @@
         android:textSize="16dp"
         android:visibility="gone" />
 
-    <info.androidhive.nec.TicketView
+    <com.nec.staffApp.TicketView
         android:id="@+id/layout_ticket"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -180,7 +180,7 @@
 
         </LinearLayout>
 
-    </info.androidhive.nec.TicketView>
+    </com.nec.staffApp.TicketView>
 
 
     <Button
