--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -6,14 +6,6 @@
     android:layout_height="match_parent"
     android:background="@drawable/bg_gradient"
     tools:context="com.nec.staffApp.MainActivity">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center"
-        android:orientation="vertical"
-        android:weightSum="1">
-
         <Button
             android:id="@+id/btn_one"
             android:layout_width="wrap_content"
@@ -25,16 +17,13 @@
             android:layout_marginEnd="20dp"
             android:layout_marginBottom="280dp"
             android:background="@drawable/rounded_button_white"
-            android:fontFamily="sans-serif-light"
-            android:bac="?attr/selectableItemBackground"
+            android:fontFamily="sans-serif-condensed"
             android:paddingLeft="20dp"
+            android:layout_centerInParent="true"
             android:paddingRight="20dp"
             android:text="Select Staff By Department"
-            android:textColor="#4d4d4d"
+            android:textColor="#ffffff"
             android:textSize="20sp" />
-
-
-    </LinearLayout>
 
 
 </RelativeLayout>
