--- a/app/src/main/res/layout/activity_main3.xml
+++ b/app/src/main/res/layout/activity_main3.xml
@@ -6,16 +6,12 @@
     android:layout_height="match_parent"
     android:background="@drawable/bg_gradient"
     tools:context="com.nec.staffApp.MainActivity">
+
         <Button
             android:id="@+id/btn_one"
-            android:layout_width="wrap_content"
+            android:layout_width="350dp"
             android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="30dp"
-            android:layout_marginEnd="20dp"
-            android:layout_marginBottom="280dp"
             android:background="@drawable/rounded_button_white"
             android:fontFamily="sans-serif-condensed"
             android:paddingLeft="20dp"
@@ -25,5 +21,19 @@
             android:textColor="#ffffff"
             android:textSize="20sp" />
 
+        <Button
+            android:id="@+id/btnSearch"
+            android:layout_below="@+id/btn_one"
+            android:layout_width="350dp"
+            android:layout_height="wrap_content"
+            android:background="@drawable/rounded_button_white"
+            android:layout_marginTop="30dp"
+            android:fontFamily="sans-serif-condensed"
+            android:paddingLeft="20dp"
+            android:layout_centerInParent="true"
+            android:paddingRight="20dp"
+            android:text="Search"
+            android:textColor="#ffffff"
+            android:textSize="20sp" />
 
 </RelativeLayout>
