--- a/app/src/main/res/layout/gridview_layout.xml
+++ b/app/src/main/res/layout/gridview_layout.xml
@@ -9,8 +9,9 @@
 
     <ImageView
         android:id="@+id/android_gridview_image"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:scaleType="fitCenter"
         android:layout_marginTop="15dp" />
 
     <TextView
