--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="viewBg">#f8f8f8</color>
     <color name="btn_disabled">#999</color>
     <color name="lbl_value">#222222</color>
+    <color name="colorAccentOpac50">#76ff2068</color>#ff2068
+    <color name="colorAccentOpac80">#ff2056</color>
 </resources>
