--- a/app/src/main/res/layout/item_sample_custom_view.xml
+++ b/app/src/main/res/layout/item_sample_custom_view.xml
@@ -14,6 +14,7 @@
         android:layout_height="match_parent"
         android:padding = "10dp"
         android:id="@+id/container"
+        android:alpha="1"
         android:orientation="vertical"
         android:background="@drawable/list_bg">
         <TextView
